# command-line-rust

./: .gitignore
01_hello/: Cargo.toml
01_hello/tests/: cli.rs
01_hello/tmp/: hello
01_hello_n/hello/: main
01_hello_n/hello/tests/: test.rs
02_echor/echor/: Cargo.toml
02_echor/echor/src/: main.rs
02_echor/echor/tests/: cli.rs
02_echor/echorn/: Cargo.toml
02_echor/echorn/src/: main.rs
02_echor/echorn/tests/: cli.rs
03_catr/catr/: Cargo.toml
03_catr/catr/src/: lib.rs
03_catr/catr/tests/: cli.rs
03_catr/catrn/: Cargo.toml
03_catr/catrn/src/: lib.rs  main.rs
03_catr/catrn/tests/: cli.rs
04_headr/headr/: Cargo.toml
04_headr/headr/src/: lib.rs
04_headr/headr/tests/: tests.rs
04_headr/headr/tests/inputs/: one.txt  two.txt
04_headr/headx/: Cargo.toml
04_headr/headx/src/: lib.rs  main.rs
05_wcr/wcr/: Cargo.toml
05_wcr/wcr/src/: lib.rs  main.rs
05_wcr/wcr/tests/: cli.rs
css2json/css2json/: Cargo.toml  a.css  output.json
css2json/css2json/src/: main.rs
