[package]
name = "echorn"
author = "saber"
description = "这是一个描述"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2.0.6"
predicates = "3.0.3"